--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,16 +1,5 @@
-{{!--<main class="index">
-    <header class="masthead d-flex">
-        <div class="container text-center my-auto">
-            <h1 class="mb-1">Pasarela</h1>
-            <h3 class="mb-5">
-                <em>Conoce nuestros aplicativos</em>
-            </h3>
-            <a href="/signin" class="btn btn-primary">
-                Empecemos
-            </a>
-        </div>
-    </header>
-</main>--}}
+ <!-- AL IGUAL QUE EN LA VISTA LISTAR SE LLAMAN LOS DATOS ALMACENADOS, ESTO PARA LA VISTA DEL INDEX QUE ES LA 
+ PÁGINA QUE VISUALIZA EL USUARIO AL INGRESAR AL APLICATIVO SIN LA NECESIDAD DE ESTAR LOGEADO -->
 <div class="container p-5">
     <div class="row">
         {{#each links}}
