--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -1,7 +1,9 @@
+<!-- VISTA PARA AÑADIR NUEVOS ENLACES -->
 <div class="container p-4">
     <div class="col-md-5 mx-auto">
         <div class="card">
             <div class="card-body">
+                <!-- RUTA DE LA VISTA Y MÉTODO MULTER PARA LA SUBIDA DE IMÁGENES -->
                 <form action="/links/add" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <input type="text" class="form-control" name="title" placeholder="Nombre del dominio" autofocus>
@@ -12,6 +14,7 @@
                     <div class="form-group">
                         <textarea name="description" rows="2" class="form-control" placeholder="Descripción"></textarea>
                     </div>
+                    <!-- INPUT DE ARCHIVOS, UTILIZADO PARA BUSCAR LAS IMÁGENES EN EL EQUIPO -->
                     <div class="input-group mb-3">
                         <div class="custom-file">
                             <input type="file" name="image" class="custom-file-input" id="inputGroupFile02">
