--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -4,10 +4,10 @@
         <div class="col-md-4 mx-auto">
             <div class="card text-center">
                 <div class="card-header" style="color: white;">
-                    <h3>Inicia sesión</h3>
+                    <h3 style=" font-weight: 600;">Inicia sesión</h3>
                 </div>
                 <div class="card-body">
-                    <img src="/img/Logo1.png" alt="Logo alcaldia"  class="card-img-top mx-auto m-2 rounded-circle w-50">
+                    <img src="/img/Logo1.png" alt="Logo alcaldia" class="card-img-top mx-auto m-2 rounded-circle w-50">
                     <form action="/signin" method="POST">
                         <div class="form-group">
                             <input type="text" name="username" placeholder="Nombre de usuario" class="form-control">
