--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -38,8 +38,8 @@
 <!-- FIN IMAGEN SUPERIOR -->
     <section class="accesos">
       <div class="tittle">
-        <h2>APPS OTIC</h2>
-        <img src="./img/server.svg" alt="" />
+        <h2 style="font-weight: 600;">APPS OTIC</h2>
+        <img src="./img/server.svg" alt="" style="margin-top: -30px;" />
       </div>
         <div class="container p-5">
             <div class="row">
