--- a/src/views/links/list.hbs
+++ b/src/views/links/list.hbs
@@ -36,8 +36,8 @@ IMAGEN SUPERIOR -->
 <!-- FIN IMAGEN SUPERIOR -->
     <section class="accesos">
       <div class="tittle">
-        <h2>APPS OTIC</h2>
-        <img src="./img/server.svg" alt="" />
+        <h2 style="font-weight: 600;">APPS OTIC</h2>
+        <img src="./img/server.svg" alt="" style="margin-top: -30px;" />
       </div>
  <!-- SE LLAMAN LOS ENLACES ALMACENADOS POR MEDIO DE UN CICLO, QUE RECORRA LA BASE DE DATOS, LLAMANDO CADA UNA DE SUS
  PROPIEDADES COMO LO ES IMAGEN, URL, TITULO, DESCRIPCION, LISTANDO ASÍ EN TARJETAS TODOS LOS ENLACES QUE ALLÍ SE 
