--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -9,6 +9,8 @@
                         <a href="/links" class="btn btn-primary m-4">
                             Guarda nuevos dominios
                         </a>
+                        <a href="/chpass/{{id}}" class="btn btn-secondary"> Cambiar contraseña </a>
+                        <!-- Se le indica la ruta junto al id del enlace, utilizado para poder editar -->
                     </div>
                 </div>
             </div>
