--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -4,17 +4,17 @@
         <div class="col-md-4 mx-auto">
             <div class="card text-center">
                 <div class="card-header" style="color: white;">
-                    <h3>Registro</h3>
+                    <h3 style=" font-weight: 600;">Registro</h3>
                 </div>
                 <div class="card-body">
                     <form action="/signup" method="POST">
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <input type="text" name="fullname" placeholder="Nombre completo" class="form-control" autofocus>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <input type="text" name="username" placeholder="Nombre de usuario" class="form-control">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <input type="password" name="password" placeholder="contraseña" class="form-control">
                         </div>
                         <div class="form-group">
