--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -37,7 +37,7 @@
                 <a class="dropdown-item" href="/profile">Perfil</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/signup">Registrar nuevo usuario</a>
-                <a class="dropdown-item" href="/chpass">Cambiar contraseña</a>
+                <!--<a class="dropdown-item" href="/chpass">Cambiar contraseña</a>-->
                 <a class="dropdown-item" href="/logout">Cerrar sesión</a>
               </div>
             </li>
